correction contraste

--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: salmon;
+    background-color: lightsalmon;
 }
 
 .tc-white {
